--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "elinit": "elint .",
+    "eslint": "eslint .",
     "eslinit-fix": "eslint --fix ."
   },
   "pre-commit": [
-    "elinit"
+    "eslint"
   ],
   "repository": {
     "type": "git",
