--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "pre-commit": "^1.2.2"
+  },
+  "dependencies": {
+    "ejs": "^3.0.1"
   }
 }
