--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "static-resource-server",
   "version": "1.0.0",
   "description": "node static resource server",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "supervisor app.js",
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "ejs": "^3.0.1",
-    "mime": "^2.4.4"
+    "mime": "^2.4.4",
+    "yargs": "^15.1.0"
   }
 }
